i18n/zh-Hant/docusaurus-plugin-content-docs/version-0.6.x/keybindings.md
---
sidebar_position: 4
---

# 鍵位綁定參考

本頁列出了 Gitti 中所有可用的鍵位綁定，按上下文和場景進行組織。

## 圖例

- **`*`** = 全局鍵位綁定（在沒有彈出視窗時，適用於所有上下文）
- **`* [!!]`** = 全局鍵位綁定，**即使在彈出視窗打開時也有效**

## 全局鍵位綁定

| 鍵         | 標記     | 操作                 | 備註                                      |
| :--------- | :------- | :------------------- | :---------------------------------------- |
| `ctrl+c`   | `* [!!]` | 退出 Gitti           | 強制退出，即使在彈出視窗中也有效          |
| `-`        | `*`      | 減小面板寬度         | 縮小左側面板                              |
| `+`        | `*`      | 增加面板寬度         | 擴大左側面板                              |
| `ctrl+s`   | `* [!!]` | 暫存所有檔案         | 暫存所有修改的檔案                        |
| `ctrl+u`   | `* [!!]` | 取消暫存所有檔案     | 取消暫存所有已暫存的檔案                  |
| `ctrl+g`   | `* [!!]` | 打開作者的 GitHub    | 在瀏覽器中打開作者的 GitHub               |
| `ctrl+l`   | `* [!!]` | 打開作者的 LinkedIn  | 在瀏覽器中打開作者的 LinkedIn             |
| `q` 或 `Q` | `*`      | 退出 Gitti           | 僅在沒有彈出視窗時有效                    |
| `?`        | `*`      | 打開全局鍵位綁定說明 | 在彈出視窗中顯示所有鍵位綁定              |
| `C`        | `*`      | 繼續操作 (Continue)  | 通用繼續操作 (rebase, merge, cherry-pick) |
| `ctrl+a`   | `*`      | 中止操作 (Abort)     | 通用中止操作 (rebase, merge, cherry-pick) |
| `ctrl+f`   | `*`      | 獲取全部             | 手動獲取全部                              |

## 組件導覽

| 鍵          | 操作               | 備註                    |
| :---------- | :----------------- | :---------------------- |
| `1`         | 聚焦本地分支面板   | 將焦點切換到分支清單    |
| `2`         | 聚焦修改的檔案面板 | 將焦點切換到檔案清單    |
| `3`         | 聚焦提交日誌 / RefLog 面板 | 將焦點切換到提交日誌 / RefLog |
| `4`         | 聚焦 Stash 面板            | 將焦點切換到 Stash 清單       |
| `/`         | 聚焦日誌組件面板           | 將焦點切換到應用日誌          |
| `tab`       | 向前循環瀏覽組件           | 移動到下一個面板              |
| `shift+tab` | 向後循環瀏覽組件           | 移動到上一個面板              |

## 清單導覽

| 鍵         | 上下文           | 操作                  |
| :--------- | :--------------- | :-------------------- |
| `↑` 或 `k` | 任何清單面板     | 向上移動 / 選擇上一項 |
| `↓` 或 `j` | 任何清單面板     | 向下移動 / 選擇下一項 |
| `↑` 或 `k` | 彈出視窗選擇清單 | 導覽到上一個選項      |
| `↓` 或 `j` | 彈出視窗選擇清單 | 導覽到下一個選項      |

## 詳細面板捲動

| 鍵         | 操作     | 上下文       |
| :--------- | :------- | :----------- |
| `↑` 或 `k` | 向上捲動 | 在詳細組件內 |
| `↓` 或 `j` | 向下捲動 | 在詳細組件內 |
| `←` 或 `h` | 向左捲動 | 在詳細組件內 |
| `→` 或 `l` | 向右捲動 | 在詳細組件內 |

## 本地分支面板

| 鍵      | 操作           | 場合                           |
| :------ | :------------- | :----------------------------- |
| `< / >` | 切換組件面板   | 在本地分支、標籤和遠端之間切換 |
| `n`     | 創建新分支     | 打開分支創建流程               |
| `enter` | 切換到選定分支 | 如需要則打開切換分支彈出視窗   |
| `d`     | 刪除選定分支   | 刪除分支（需要確認）           |
| `r`     | 變基到另一個分支   | 僅在選定分支為已檢出分支時有效 |
| `m`     | 合併分支到當前分支 | 打開多分支合併選擇器           |

## 修改的檔案面板

| 鍵      | 操作              | 場合                                   |
| :------ | :---------------- | :------------------------------------- |
| `space` | 切換暫存/取消暫存 | 在暫存和未暫存之間切換檔案             |
| `e`     | 編輯檔案          | 在外部編輯器/終端中打開檔案            |
| `enter` | 查看檔案差異      | 在詳細面板中顯示差異                   |
| `r`     | 解決衝突          | 打開衝突解決選項（僅在衝突檔案時顯示） |
| `d`     | 丟棄變更          | 打開丟棄確認流程                       |
| `s`     | 暫存選定檔案      | 打開 Stash 訊息輸入彈出視窗            |
| `S`     | 暫存所有檔案      | 打開 Stash 訊息輸入彈出視窗            |
| `c`     | 提交              | 打開提交彈出視窗                       |
| `A`     | 修改提交          | 打開修改提交彈出視窗                   |

## 提交日誌面板

| 鍵       | 操作             | 備註                                    |
| :------- | :--------------- | :-------------------------------------- |
| `< / >`  | 切換到 RefLog    | 切換到 RefLog 面板                      |
| `r`      | 重置選定的提交   | 打開重置選項（Soft/Mixed/Hard）         |
| `R`      | 重置最新提交     | 打開 HEAD 的重置選項（Soft/Mixed/Hard） |
| `ctrl+r` | 還原提交         | 打開提交還原選項                        |
| `t`      | 創建標籤         | 打開創建標籤菜單                        |
| `ctrl+p` | Cherry Pick 模式 | 進入 Cherry Pick 選擇模式               |
| `enter`  | 查看提交詳情     | 在詳細面板中顯示提交差異                |

## RefLog 面板

| 鍵       | 操作                         | 備註                               |
| :------- | :--------------------------- | :--------------------------------- |
| `< / >`  | 切換到提交日誌               | 切換回提交日誌面板                 |
| `↑ or k` | 移動到上一條目               |                                    |
| `↓ or j` | 移動到下一條目               |                                    |
| `enter`  | 查看條目詳情                 | 在詳細面板中顯示條目資訊           |
| `n`      | 從提交雜湊創建新分支         | 打開分支名稱輸入彈出視窗           |
| `r`      | 重置到選定提交               | 打開重置選項（Soft/Mixed/Hard）    |
| `ctrl+p` | 在當前分支上 Cherry Pick     | 打開 Cherry Pick 確認彈出視窗      |

## Stash 面板

| 鍵          | 操作       | 場合                      |
| :---------- | :--------- | :------------------------ |
| `space`     | 應用 Stash | 應用 Stash 但保留在清單中 |
| `backspace` | 彈出 Stash | 應用 Stash 並從清單中刪除 |
| `d`         | 刪除 Stash | 永久刪除 Stash            |

## 日誌面板

| 鍵  | 操作     | 備註                              |
| :-- | :------- | :-------------------------------- |
| `e` | 導出日誌 | 將日誌內容導出到 Downloads 資料夾 |

## 標籤面板

| 鍵       | 操作             | 場合                           |
| :------- | :--------------- | :----------------------------- |
| `< / >`  | 切換組件面板     | 在本地分支、標籤和遠端之間切換 |
| `d`      | 刪除標籤         | 打開刪除標籤菜單               |
| `ctrl+p` | 推送標籤         | 打開推送標籤菜單               |
| `f`      | 獲取標籤         | 打開獲取標籤菜單               |
| `?`      | 快捷鍵和操作說明 | 打開專用說明彈出視窗           |

## 遠端操作

| 鍵  | 操作 | 場合                                |
| :-- | :--- | :---------------------------------- |
| `p` | 推送 | 打開推送流程（遠端選擇 → 推送選項） |
| `P` | 拉取 | 打開拉取流程（拉取類型選擇）        |

## 遠端面板

| 鍵      | 操作             | 場合                           |
| :------ | :--------------- | :----------------------------- |
| `< / >` | 切換組件面板     | 在本地分支、標籤和遠端之間切換 |
| `n`     | 新建遠端         | 打開添加遠端流程               |
| `d`     | 移除遠端         | 移除已配置的遠端               |
| `e`     | 編輯遠端         | 打開編輯遠端流程               |
| `enter` | 設為追蹤上游     | 將當前遠端設置為上游           |
| `?`     | 快捷鍵和操作說明 | 打開專用說明彈出視窗           |

## 彈出視窗鍵位綁定

### 文字輸入彈出視窗

_適用於：提交、修改提交、添加遠端、創建分支、Stash 訊息_

| 鍵          | 操作       | 備註                                               |
| :---------- | :--------- | :------------------------------------------------- |
| `ctrl+e`    | 提交       | 提交表單（用於多行文字區域）                       |
| `ctrl+p`    | 貼上       | 從剪貼簿貼上文字                                   |
| `ctrl+y`    | 複製       | 將選中的文字複製到剪貼簿                           |
| `enter`     | 提交       | 僅適用於單行輸入（分支名稱、Stash 訊息、遠端欄位） |
| `esc`       | 取消       | 不儲存關閉彈出視窗                                 |
| `tab`       | 下一個欄位 | 移動到下一個輸入欄位（如有多個欄位）               |
| `shift+tab` | 上一個欄位 | 移動到上一個輸入欄位（如有多個欄位）               |

---

### 選擇彈窗

_適用於：分支類型、切換類型、推送類型、拉取類型、遠程選擇、丟棄類型、解決衝突類型_

| 鍵         | 操作     | 備註               |
| :--------- | :------- | :----------------- |
| `↑` 或 `k` | 向上導覽 | 選擇上一個選項     |
| `↓` 或 `j` | 向下導覽 | 選擇下一個選項     |
| `enter`    | 確認選擇 | 使用選定選項繼續   |
| `esc`      | 取消     | 不執行操作關閉彈窗 |

---

### 輸出/結果彈窗出視窗

_適用於：推送輸出、拉取輸出、切換分支輸出_

| 鍵    | 操作     | 備註         |
| :---- | :------- | :----------- |
| `esc` | 關閉彈窗 | 關閉輸出彈窗 |

---

### 鍵綁定幫助彈窗出視窗

| 鍵         | 操作     | 備註             |
| :--------- | :------- | :--------------- |
| `↑` 或 `k` | 向上捲動 | 捲動鍵位綁定清單 |
| `↓` 或 `j` | 向下捲動 | 捲動鍵位綁定清單 |
| `esc`      | 關閉說明 | 關閉說明彈出視窗 |

## 詳細檢視（右側面板）

| 鍵         | 操作           | 備註                               |
| :--------- | :------------- | :--------------------------------- |
| `esc`      | 返回清單       | 退出詳細檢視，將焦點返回到清單面板 |
| `↑` 或 `k` | 向上捲動       | 向上捲動差異內容                   |
| `↓` 或 `j` | 向下捲動       | 向下捲動差異內容                   |
| `←` 或 `h` | 向左捲動       | 向左捲動差異內容                   |
| `→` 或 `l` | 向右捲動       | 向右捲動差異內容                   |
| `[`        | 上一個拆分面板 | 切換到暫存/未暫存視圖              |
| `]`        | 下一個拆分面板 | 切換到暫存/未暫存視圖              |
| `L`        | 切換行暫存模式   | 進入/退出單行暫存模式 (檢視檔案時)            |
| `space`    | 暫存/取消暫存行 | 暫存/取消暫存選中行（行編輯模式時）           |
| `d`        | 丟棄行          | 丟棄選中行（行編輯模式時）                    |

## 總結

- **`* [!!]`** 鍵位綁定在任何地方都有效，包括在彈出視窗內
- **`*`** 鍵位綁定全局有效，但在彈出視窗打開時無效
- **特定上下文的鍵位綁定**僅在其各自的面板中有效
- **彈出視窗鍵位綁定**取決於彈出視窗類型（文字輸入 vs 選擇 vs 輸出）
- **`esc`**是關閉彈出視窗或退出詳細檢視的通用方法
